--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "com.generalisk.credits",
-  "version": "1.0.0-pre",
+  "version": "1.0.0",
   "displayName": "Simple Credits System",
   "author": {
     "name": "Generalisk",
