--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
   "dependencies": {
     "com.unity.ugui": "2.0.0"
   },
-  "license": "LICENSE",
-  "licensesUrl": "https://github.com/Generalisk/Unity-SimpleCreditsSystem/LICENSE",
+  "license": "LICENSE.txt",
+  "licensesUrl": "https://github.com/Generalisk/Unity-SimpleCreditsSystem/LICENSE.txt",
   "changelogUrl": "https://github.com/Generalisk/Unity-SimpleCreditsSystem/releases",
   "description": "Simple Credits System is A Unity Package that allows you to quickly & easily create A credits scene for your game. Simple Credits System simplifies the process by allowing you to customize the contents of the scene within the Project Settings & generate the in-game scene on the fly."
 }
