--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "com.generalisk.credits",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "displayName": "Simple Credits System",
   "author": {
     "name": "Generalisk",
@@ -12,8 +12,8 @@
     "com.unity.ugui": "2.0.0"
   },
   "license": "LICENSE.txt",
-  "licensesUrl": "https://github.com/Generalisk/Unity-SimpleCreditsSystem/blob/main/LICENSE.txt",
+  "licensesUrl": "https://github.com/Generalisk/Unity-SimpleCreditsSystem/blob/1.0.1/LICENSE.txt",
   "changelogUrl": "https://github.com/Generalisk/Unity-SimpleCreditsSystem/releases",
-  "documentationUrl": "https://github.com/Generalisk/Unity-SimpleCreditsSystem/tree/main/Documentation~",
+  "documentationUrl": "https://github.com/Generalisk/Unity-SimpleCreditsSystem/tree/1.0.1/Documentation~",
   "description": "Simple Credits System is A Unity Package that allows you to quickly & easily create A credits scene for your game. Simple Credits System simplifies the process by allowing you to customize the contents of the scene within the Project Settings & generate the in-game scene on the fly."
 }
