--- a/package.json
+++ b/package.json
@@ -15,5 +15,5 @@
   "licensesUrl": "https://github.com/Generalisk/Unity-SimpleCreditsSystem/blob/1.0.1/LICENSE.txt",
   "changelogUrl": "https://github.com/Generalisk/Unity-SimpleCreditsSystem/releases",
   "documentationUrl": "https://github.com/Generalisk/Unity-SimpleCreditsSystem/tree/1.0.1/Documentation~",
-  "description": "Simple Credits System is A Unity Package that allows you to quickly & easily create A credits scene for your game. Simple Credits System simplifies the process by allowing you to customize the contents of the scene within the Project Settings & generate the in-game scene on the fly."
+  "description": "Simple Credits System is a Unity Package that allows you to quickly & easily create a credits scene for your game. Simple Credits System simplifies the process by allowing you to customize the contents of the scene within the Project Settings & generate the in-game scene on the fly."
 }
